--- a/src/app/admin/index.html
+++ b/src/app/admin/index.html
@@ -41,6 +41,9 @@
   </div>
 </div>
 
+<button type="button" class="btn btn-primary" >Get</button>
+
+
 <!-- <tr *ngFor="let item of listPaper">
     <th scope="row">{{item.idpaper_form}}</th>
     <td>{{item.paper_form_No}}</td>
